[package]
name = "engine3d"
version = "0.2.0"
authors = ["DelSkayn <yoko.minsky@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
gfx = "*"
glutin = "*"
log = "*" 
image = "*"
time = "0.1"
num_cpus = "*"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
