[package]
name = "tungsten"
version = "0.0.1"
authors = ["DelSkayn <mees.delzenne@gmail.com>"]

[dependencies]
glutin = "*"
log = "*" 
time = "*"
crossbeam = "*"
lazy_static = "*"
toml = "*"
vulkano = "*"

[dependencies.task]
path = "../../task-rs"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

