[package]
name = "tungsten"
version = "0.0.1"
authors = ["DelSkayn <mees.delzenne@gmail.com>"]

[dependencies]
glutin = "*"
glium = "*"
log = "*" 
time = "*"
crossbeam = "*"
lazy_static = "*"
toml = "*"
libc = "*"

[dependencies.task]
path = "../../task-rs"

[dependencies.vulkano]
path = "../../vulkano/vulkano"


[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

