[package]
name = "tungsten"
version = "0.0.1"
authors = ["DelSkayn <mees.delzenne@gmail.com>"]

[dependencies]
log = "*"

[dependencies.tungsten_core]
path = "tungsten_core"

[dependencies.tungsten_asset]
path = "tungsten_asset"

[dependencies.tungsten_render]
path = "tungsten_render"

[dependencies.tungsten_logic]
path = "tungsten_logic"

[dependencies.task]
path = "../task-rs"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

