[package]
name = "tungsten_render"
version = "0.1.0"
authors = ["DelSkayn <yoko.minsky@gmail.com>"]

[dependencies]
cgmath = "*"
vulkano = "*"
glium = "*"
log = "*"

[dependencies.task]
path = "../../task-rs"

[dependencies.tungsten_core]
path = "../tungsten_core"

[dependencies.tungsten_asset]
path = "../tungsten_asset"

[dependencies.tungsten_render_ogl]
path = "tungsten_render_ogl"

[dependencies.tungsten_render_vulkan]
path = "tungsten_render_vulkan"
